--- a/JavaScriptElearning/WebContent/index.html
+++ b/JavaScriptElearning/WebContent/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html ng-app="ElearningApp">
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta charset="UTF-8">
 	<meta name="description" content="E-learning">
 	<meta name="keywords" content="JavaScript, Tutorial">
 	<meta name="author" content="Michal Podbielski">
 	<script src="lib/angular.min.js"></script>	
 	<script src="lib/angular-route.js"></script>
-	<script src="lib/ngStorage.js"></script>
 	<script src="lib/ui-bootstrap-tpls-2.1.3.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/controllers/pageController.js"></script>
 	<script src="js/controllers/editorController.js"></script>
+	<script src="js/controllers/videoLessonController.js"></script>
+	<script src="js/controllers/quizController.js"></script>
 	<script src="js/directives/pageDirectives.js"></script>
 	<script src="js/services/pageServices.js"></script>
 	<script src="js/controllers/usersController.js"></script>
