add validation and user form

--- a/JavaScriptElearning/WebContent/index.html
+++ b/JavaScriptElearning/WebContent/index.html
@@ -14,8 +14,10 @@
 	<script src="js/controllers/editorController.js"></script>
 	<script src="js/controllers/videoLessonController.js"></script>
 	<script src="js/controllers/quizController.js"></script>
+	<script src="js/controllers/modalFormController.js"></script>
 	<script src="js/directives/pageDirectives.js"></script>
 	<script src="js/services/pageServices.js"></script>
+	<script src="js/services/inputService.js"></script>
 	<script src="js/controllers/usersController.js"></script>
 	<script src="js/services/usersService.js"></script>
 	<script src="lib/ace.js"></script>
